--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ script:
   - sbt ++$TRAVIS_SCALA_VERSION package doc
 scala:
   - 2.10.6
-  - 2.11.7
+  - 2.11.8
 jdk:
   - oraclejdk7
+matrix:
+  include:
+    - scala: 2.12.0-RC2
+      jdk: oraclejdk8
