--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,16 @@ language: scala
 script:
   - sbt ++$TRAVIS_SCALA_VERSION package doc
 scala:
-  - 2.10.6
-  - 2.11.11
-  - 2.12.2
-  - 2.13.0-M1
+  - 2.10.7
+  - 2.11.12
+  - 2.12.4
+  - 2.13.0-M3
 jdk:
   - oraclejdk8
 env:
-  - SCALAJS_VERSION=0.6.18
-  - SCALAJS_VERSION=1.0.0-M1
+  - SCALAJS_VERSION=0.6.22
+  - SCALAJS_VERSION=1.0.0-M3
+matrix:
+  exclude:
+    - scala: 2.10.7
+      env: SCALAJS_VERSION=1.0.0-M3
