--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ env:
 cache:
   directories:
     - "$HOME/.ivy2/cache"
+    - "$HOME/.cache/coursier"
     - "$HOME/.sbt"
 before_cache:
-  # Cleanup the cached directories to avoid unnecessary cache updates
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt -name "*.lock" -print -delete
+  - rm -fv $HOME/.ivy2/.sbt.ivy.lock
+  - find $HOME/.ivy2/cache     -name "ivydata-*.properties" -print -delete
+  - find $HOME/.cache/coursier -name "*.lock"               -print -delete
+  - find $HOME/.sbt            -name "*.lock"               -print -delete
