--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,17 @@ script:
 scala:
   - 2.10.7
   - 2.11.12
-  - 2.12.8
-  - 2.13.0-RC2
+  - 2.12.10
+  - 2.13.1
 jdk:
   - openjdk8
 env:
-  - SCALAJS_VERSION=0.6.27
-  - SCALAJS_VERSION=1.0.0-M7
+  - SCALAJS_VERSION=0.6.31
+  - SCALAJS_VERSION=1.0.0-RC2
 matrix:
   exclude:
     - scala: 2.10.7
-      env: SCALAJS_VERSION=1.0.0-M7
+      env: SCALAJS_VERSION=1.0.0-RC2
 
 cache:
   directories:
